syntax = "proto3";

package toServerRouter;

option go_package = "./protocol/toServer/router;router";

//工作进程，发给服务器的各种指令
enum Cmd {
  // RegisterWorker 注册工作进程
  RegisterWorker = 0;
  // BroadCast 广播
  BroadCast = 1;
  // Multicast 组播
  Multicast = 2;
  // SingleCast 单播
  SingleCast = 3;
  // Subscribe 订阅
  Subscribe = 4;
  // Unsubscribe 取消订阅
  Unsubscribe = 5;
  // Publish 发布
  Publish = 6;
}

//路由
message Router {
  //命令
  Cmd cmd = 1;
  //命令携带的数据
  bytes data = 2;
}